Vertical align fix to forms elements added

--- a/src/sass/modules/_button.scss
+++ b/src/sass/modules/_button.scss
@@ -2,6 +2,7 @@
 /* Buttons */
 .g-btn{
     display: inline-block;
+    vertical-align:middle;
     @include px2rem(height, 36px);
     @include px2rem(padding, 0 10px);
     color:#fff;
